@@ -16,7 +16,9 @@
 #define RIGHT_BUTTON_UP						0x0100
 #define RIGHT_BUTTON_REPEAT				0x0200
 #define MOUSE_POS									0x0400
-#define MOUSE_WHEEL								0x0800
+#define MOUSE_WHEEL_UP      0x0800
+#define MOUSE_WHEEL_DOWN    0x1000
+#define INPUT_MOUSE         0x1FF8
 
 #define SHIFT_DOWN								0x01
 #define CTRL_DOWN									0x02
